Error(404): no logro enrutar correctamente.

--- a/src/views/layouts/contact.ejs
+++ b/src/views/layouts/contact.ejs
@@ -12,6 +12,18 @@
 
 <body>
 
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h2>¿Dónde estamos?</h2>
+        <p>Pueden encontrarnos en: <strong>Donato Guerra 340, Colonia El Toril
+            Poncitlán, Jalisco, México</strong></p>
+      </div>
+      <div class="col">
+        <img src="../../public/maps-dir.png" alt="google-maps-img">
+      </div>
+    </div>
+  </div>
 
 </body>
 
