--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<%- include("template/cabecera" , {tituloWeb: 'Casa del Anciano Poncitlán'} ) %>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <title>Casa de Descanso del Anciano de Poncitlan</title>
+  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 
 <body>
@@ -20,7 +14,7 @@
             Poncitlán, Jalisco, México</strong></p>
       </div>
       <div class="col">
-        <img src="../server/public/map-dir.jpeg" alt="google-maps-img">
+        <img src="" alt="google-maps-img">
       </div>
     </div>
   </div>
