--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -1,13 +1,10 @@
 <%- include("template/cabecera" , {tituloWeb: 'Casa del Anciano Poncitlán'} ) %>
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-</head>
 
 <body>
 
   <div class="container">
-    <div class="row">
+
+    <div class="row mt-5">
       <div class="col">
         <h2>¿Dónde estamos?</h2>
         <p>Pueden encontrarnos en: <strong>Donato Guerra 340, Colonia El Toril
@@ -17,6 +14,26 @@
         <img src="../public/images/map-dir.jpeg" alt="google-maps-img">
       </div>
     </div>
+
+    <div class="row mt-5">
+      <div class="col justify-center inline-f">
+        <img class="icon" src="../public/images/phone.svg" alt="phone-icon">
+        <h3 class="ml-3">391 921 0384</h3>
+      </div>
+
+      <div class="col justify-center inline-f">
+        <img class="icon" src="../public/images/facebook.svg" alt="facebook-icon">
+        <h3 class="ml-3"><a href="https://www.facebook.com/CasaDeDescansoDelAncianoDePoncitlan">Nuesta página de
+            Facebook</a></h3>
+      </div>
+    </div>
+
+    <div class="row mt-5">
+      <div class="col text-center">
+        <p class="italic">Un lugar donde los ancianitos que habitan en el lo han adoptado como su hogar.</p>
+      </div>
+    </div>
+
   </div>
 
 </body>
