--- a/src/views/aboutUs.ejs
+++ b/src/views/aboutUs.ejs
@@ -1,5 +1,17 @@
-<%- include("template/cabecera" , {tituloWeb: 'Sobre Nosotros' }) %>
+<%- include("template/cabecera" , {tituloWeb: 'Sobre Nosotros' }) %>    
 <body>
-    <h1>Sobre nosotros: </h1>
+    <div class="container-fluid bg-blue">
+        <div class="text-center elegant-border times-new-roman">
+            <h1> Sobre Nosotros: </h1>   
+        </div>
+        <div class="elegant-border times-new-roman">
+            <p>Casa de ancianos de poncitlán Jalisco : una humilde sociedad de ancianos y monjas que se encargan de su cuidado</p>
+            <p> En Casa de ancianos poncitlán, nos haremos cargo de tus seres queridos y les proporcionaremos la compañia que necesitan para que estén felices</p>
+            <p> Nuestros compañeros actualmente son : </p>
+            <!-- Añadir fotos de ancianos! --> 
+        </div>
+        
+    </div>
 </body>
 </html>
+
