--- a/src/views/aboutUs.ejs
+++ b/src/views/aboutUs.ejs
@@ -1,5 +1,8 @@
 <%- include("template/cabecera" , {tituloWeb: 'Sobre Nosotros' }) %>    
 <body>
+    <header>
+        <h1>Casa de ancianos |  Poncitlán, Jalisco</h1>
+    </header>
     <div class="container-fluid bg-blue">
         <div class="text-center elegant-border times-new-roman">
             <h1> Sobre Nosotros: </h1>   
@@ -12,6 +15,7 @@
         </div>
         
     </div>
+    <%- include("template/footer" ) %>
 </body>
 </html>
 
