--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -1,7 +1,9 @@
 <%- include("template/cabecera" , {tituloWeb: 'Casa del Anciano Poncitlán'} ) %>
 
 <body>
-
+  <header>
+    <h1>Casa de ancianos |  Poncitlán, Jalisco</h1>
+  </header>
   <div class="container">
 
     <div class="row mt-5">
@@ -35,7 +37,7 @@
     </div>
 
   </div>
-
+  <%- include("template/footer" ) %>
 </body>
 
 </html>
