Corrección de typos y datos de contacto

--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -2,7 +2,7 @@
 
 <body>
   <header>
-    <h1>Casa de ancianos |  Poncitlán, Jalisco</h1>
+    <h1>Casa de Descanso Del Anciano de Poncitlan</h1>
   </header>
   <div class="container">
 
