--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,8 +1,8 @@
-<%- include("template/cabecera" , {tituloWeb: 'Casa de descanso de ancianos'}) %>
+<%- include("template/cabecera" , {tituloWeb: 'Casa de Descanso Del Anciano de Poncitlan'}) %>
 
 <body>
     <header>
-        <h1>Casa de ancianos |  Poncitlán, Jalisco</h1>
+        <h1>Casa de Descanso Del Anciano de Poncitlan</h1>
     </header>
     <section class="features">
         <figure>
