--- a/src/views/template/footer.ejs
+++ b/src/views/template/footer.ejs
@@ -1,5 +1,5 @@
 
 
 <footer>
-    Casa de Ancianos Poncitlán, Jalisco | Teléfono:333333333 | casa-poncitlán@gmail.com
+    Casa de Descanso Del Anciano de Poncitlan | Teléfono:391 921 0384 | casadedescanso9604@gmail.com
 </footer>
