Navbar y login page

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,43 +1,49 @@
 <%- include("template/cabecera" , {tituloWeb: 'Casa de Descanso Del Anciano de Poncitlan'}) %>
 
+<%- include("template/nav" ) %>
+
 <body>
     <header>
         <h1>Casa de Descanso Del Anciano de Poncitlan</h1>
     </header>
     <section class="features">
         <figure>
-            <img src="../public/images/unidos.jpg"alt="unidos">
+            <img src="../public/images/unidos.jpg" alt="unidos">
             <figcaption>¡Conócenos!</figcaption>
             <div class="text-boxes">
                 <p>
-                    Podrás conocer a algunos de los ancianos que se hospedan en nuestra casa, para que los conozcas mejor y te animes a apoyarnos. ¿Qué esperas? ¡No te pierdas esta oportunidad única!
+                    Podrás conocer a algunos de los ancianos que se hospedan en nuestra casa, para que los conozcas
+                    mejor y te animes a apoyarnos. ¿Qué esperas? ¡No te pierdas esta oportunidad única!
                 </p>
-                
+
             </div>
-            <a href="/contacto">¡Conócenos!</a> 
+            <a href="/contacto">¡Conócenos!</a>
         </figure>
         <figure>
-            <img src="../public/images/apoyo.jpg"alt="apoyo">
+            <img src="../public/images/apoyo.jpg" alt="apoyo">
             <figcaption>¿Qué necesitamos?</figcaption>
             <div class="text-boxes">
                 <p>
-                    A continuación podrás ver una lista de necesidades de nuestros hospedados. Así sabrás que nos hace falta en la casa y que nos sería de mucha utilidad.
+                    A continuación podrás ver una lista de necesidades de nuestros hospedados. Así sabrás que nos hace
+                    falta en la casa y que nos sería de mucha utilidad.
                 </p>
             </div>
-            <a href="/necesidades">¿Qué necesitamos?</a> 
+            <a href="/necesidades">¿Qué necesitamos?</a>
         </figure>
 
         <figure>
-            <img src="../public/images/donativo.png"alt="despensa">
+            <img src="../public/images/donativo.png" alt="despensa">
             <figcaption>¡Apóyanos!</figcaption>
             <div class="text-boxes">
                 <p>
-                    Aquí podrás apoyarnos directamente. ¿Qué nos estas donando? ¿A quién se lo estás donando? ¡Todo eso y más! 
+                    Aquí podrás apoyarnos directamente. ¿Qué nos estas donando? ¿A quién se lo estás donando? ¡Todo eso
+                    y más!
                 </p>
             </div>
-            <a href="/donativo">¡Apóyanos!</a> 
+            <a href="/donativo">¡Apóyanos!</a>
         </figure>
     </section>
     <%- include("template/footer" ) %>
 </body>
+
 </html>
