--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -17,7 +17,10 @@
                 </p>
 
             </div>
-            <a href="/contacto">¡Conócenos!</a>
+            <button>
+                <a href="/contacto">¡Conócenos!</a>
+            </button>
+
         </figure>
         <figure>
             <img src="../public/images/apoyo.jpg" alt="apoyo">
@@ -28,7 +31,9 @@
                     falta en la casa y que nos sería de mucha utilidad.
                 </p>
             </div>
-            <a href="/necesidades">¿Qué necesitamos?</a>
+            <button>
+                <a href="/necesidades">¿Qué necesitamos?</a>
+            </button>
         </figure>
 
         <figure>
@@ -40,7 +45,9 @@
                     y más!
                 </p>
             </div>
-            <a href="/donativo">¡Apóyanos!</a>
+            <button>
+                <a href="/donativo">¡Apóyanos!</a>
+            </button>
         </figure>
     </section>
     <%- include("template/footer" ) %>
