--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -1,5 +1,5 @@
 <%- include("template/cabecera" , {tituloWeb: 'Casa del Anciano Poncitlán'} ) %>
-
+<%- include("template/nav" ) %>
 <body>
   <header>
     <h1>Casa de Descanso Del Anciano de Poncitlan</h1>
