--- a/src/views/needs.ejs
+++ b/src/views/needs.ejs
@@ -1,5 +1,8 @@
 <%- include("template/cabecera" , {tituloWeb: 'donativo' }) %>  
+<%- include("template/nav" ) %>
 <body>
+    <header>
+    </header>
     <%- include("template/footer" ) %>
 </body>
 </html>
