se creo una unica plantilla header.ejs con el header y la navbar. Se modificaron los estilos de header y navbar

--- a/src/views/aboutUs.ejs
+++ b/src/views/aboutUs.ejs
@@ -1,10 +1,6 @@
-<%- include("template/cabecera" , {tituloWeb: 'Sobre Nosotros' }) %> 
-<%- include("template/nav" ) %>   
-<body>
-    <header>
-    </header>
+<%- include("template/header" , {tituloWeb: 'Contacto | Casa del Anciano Poncitlán'} ) %>
 
-    <%- include("template/footer" ) %>
+<%- include("template/footer" ) %>
 </body>
-</html>
 
+</html>
