--- a/src/views/donation.ejs
+++ b/src/views/donation.ejs
@@ -1,8 +1,7 @@
-<%- include("template/cabecera" , {tituloWeb: 'donativo' }) %> 
-<%- include("template/nav" ) %> 
-<body>
-    <header>
-    </header>
-    <%- include("template/footer" ) %>
+<%- include("template/header" , {tituloWeb: 'Donacion | Casa del Anciano Poncitlán'} ) %>
+
+
+<%- include("template/footer" ) %>
 </body>
+
 </html>
