--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,4 +1,4 @@
-<%- include("template/cabecera" , {tituloWeb: 'Casa de Descanso Del Anciano de Poncitlan'}) %>
+<%- include("template/header" , {tituloWeb: 'Login | Casa del Anciano Poncitlán'} ) %>
 
 <form>
   <div class="form-group">
