--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -63,14 +63,30 @@ header{
   background-image: url("../images/atardecer.jpg");
   background-size: 100%;
   background-position: center;
-  height:400px;
-  padding: 20px;
-  text-align:center;
+  height:33vh;
+  margin-top: 4rem;
 }
+
 header h1{
-  color:white;
-  margin-top:60px;
+  padding-top: 5rem;
 }
+
+/*NAVBAR STYLES*/
+
+nav{
+  background:#011638;
+}
+
+nav li a{
+  color: white;
+  margin: 0 1rem;
+}
+
+nav li a:hover{
+  font-weight: bold;
+  color: white;
+}
+
 /* HOMEPAGE*/
 
 .features{
@@ -102,7 +118,6 @@ header h1{
   text-transform: none;
 }
 
-
 button {
   background-color: orangered; /* Green */
   border: 1px white;
@@ -133,8 +148,15 @@ button:hover a{
 
 footer{
   background:#011638;
-  color:gray;
+  color:white;
   font-size:12px;
   padding: 20px 20px;
   text-align: center;
+}
+
+
+/*OTHER STYLES*/
+
+.logo{
+  width: 3rem;
 }
