--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -1,78 +1,73 @@
-<%- include("template/cabecera" , {tituloWeb: 'Casa del Anciano Poncitlán'} ) %>
-<%- include("template/nav" ) %>
+<%- include("template/header" , {tituloWeb: 'Contacto | Casa del Anciano Poncitlán'} ) %>
 
-<body>
-  <header>
-    <h1>Casa de Descanso Del Anciano de Poncitlan</h1>
-  </header>
-  <div class="container mt-4">
+<div class="container mt-4">
 
-    <div class="row justify-content-center my-4">
-      <div class="col-4">
-        <h2>¡Contacta con nosotros!</h2>
-      </div>
-    </div>
-
-    <div class="row justify-content-center">
-      <div class="col-4">
-        <form>
-          <div class="form-group">
-            <label for="name">Nombre</label>
-            <input type="text" class="form-control" id="name">
-          </div>
-          <div class="form-group">
-            <label for="email">Correo electrónico</label>
-            <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-          </div>
-          <div class="form-group">
-            <label for="message">Mensaje</label><br>
-            <textarea name="message" id="message" cols="46" rows="12"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
-        </form>
-      </div>
+  <div class="row justify-content-center my-4">
+    <div class="col-4">
+      <h2>¡Contacta con nosotros!</h2>
     </div>
   </div>
 
-  <div class="container-fluid">
-    <hr class="shadow-lg bg-black rounded">
+  <div class="row justify-content-center">
+    <div class="col-4">
+      <form>
+        <div class="form-group">
+          <label for="name">Nombre</label>
+          <input type="text" class="form-control" id="name">
+        </div>
+        <div class="form-group">
+          <label for="email">Correo electrónico</label>
+          <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+        </div>
+        <div class="form-group">
+          <label for="message">Mensaje</label><br>
+          <textarea name="message" id="message" cols="46" rows="12"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
+      </form>
+    </div>
   </div>
+</div>
 
-  <div class="container mt-4">
+<div class="container-fluid">
+  <hr class="shadow-lg bg-black rounded">
+</div>
+
+<div class="container mt-4">
+  <div class="row mt-5">
+    <div class="col">
+      <h2>¿Dónde estamos?</h2>
+      <p>Pueden encontrarnos en: <strong>Donato Guerra 340, Colonia El Toril
+          Poncitlán, Jalisco, México</strong></p>
+    </div>
+    <div class="col">
+      <img src="../public/images/map-dir.jpeg" alt="google-maps-img">
+    </div>
+    </d>
+
     <div class="row mt-5">
-      <div class="col">
-        <h2>¿Dónde estamos?</h2>
-        <p>Pueden encontrarnos en: <strong>Donato Guerra 340, Colonia El Toril
-            Poncitlán, Jalisco, México</strong></p>
-      </div>
-      <div class="col">
-        <img src="../public/images/map-dir.jpeg" alt="google-maps-img">
-      </div>
-      </d>
-
-      <div class="row mt-5">
-        <div class="col justify-center inline-f">
-          <img class="icon" src="../public/images/phone.svg" alt="phone-icon">
-          <h3 class="ml-3">391 921 0384</h3>
-        </div>
-
-        <div class="col justify-center inline-f">
-          <img class="icon" src="../public/images/facebook.svg" alt="facebook-icon">
-          <h3 class="ml-3"><a href="https://www.facebook.com/CasaDeDescansoDelAncianoDePoncitlan">Nuesta página de
-              Facebook</a></h3>
-        </div>
+      <div class="col justify-center inline-f">
+        <img class="icon" src="../public/images/phone.svg" alt="phone-icon">
+        <h3 class="ml-3">391 921 0384</h3>
       </div>
 
-      <div class="row mt-5">
-        <div class="col text-center">
-          <p class="italic">Un lugar donde los ancianitos que habitan en el lo han adoptado como su hogar.</p>
-        </div>
+      <div class="col justify-center inline-f">
+        <img class="icon" src="../public/images/facebook.svg" alt="facebook-icon">
+        <h3 class="ml-3"><a href="https://www.facebook.com/CasaDeDescansoDelAncianoDePoncitlan">Nuesta página de
+            Facebook</a></h3>
       </div>
-
     </div>
-  </div>
 
-  <%- include("template/footer" ) %>
+    <div class="row mt-5">
+      <div class="col text-center">
+        <p class="italic">Un lugar donde los ancianitos que habitan en el lo han adoptado como su hogar.</p>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<%- include("template/footer" ) %>
 </body>
 
 </html>
