--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,30 +1,24 @@
-<%- include("template/cabecera" , {tituloWeb: 'Casa de Descanso Del Anciano de Poncitlan'}) %>
+<%- include("template/header" , {tituloWeb: 'Casa del Anciano Poncitlán'} ) %>
 
-<%- include("template/nav" ) %>
-
-<body>
-    <header>
-        <h1>Casa de Descanso Del Anciano de Poncitlan</h1>
-    </header>
-   
-    <section class="features">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm">
-                    <figure>
-                        <img src="../public/images/SobreNosotros.jpg" alt="Historias">
-                        <figcaption>¡Sobre Nosotros!</figcaption>
-                    </figure>
-                    <div class="text-boxes">
-                        <p>
-                            Conoce las historias de las personas que se hospedan en la casa de ancianos. ¡Énterate de como llegaron aquí!
-                        </p>
-                        <button>
-                            <a href="/SobreNosotros">Sobre Nosotros</a>
-                        </button>
-                    </div>
+<section class="features">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <figure>
+                    <img src="../public/images/SobreNosotros.jpg" alt="Historias">
+                    <figcaption>¡Sobre Nosotros!</figcaption>
+                </figure>
+                <div class="text-boxes">
+                    <p>
+                        Conoce las historias de las personas que se hospedan en la casa de ancianos. ¡Énterate de como
+                        llegaron aquí!
+                    </p>
+                    <button>
+                        <a href="/SobreNosotros">Sobre Nosotros</a>
+                    </button>
                 </div>
-              <div class="col-sm">
+            </div>
+            <div class="col-sm">
                 <figure>
                     <img src="../public/images/unidos.jpg" alt="unidos">
                     <figcaption>¡Conócenos!</figcaption>
@@ -38,43 +32,45 @@
                         <a href="/contacto">¡Conócenos!</a>
                     </button>
                 </div>
-                
-              </div>
-              <div class="col-sm">
+
+            </div>
+            <div class="col-sm">
                 <figure>
                     <img src="../public/images/apoyo.jpg" alt="apoyo">
                     <figcaption>¿Qué necesitamos?</figcaption>
                 </figure>
                 <div class="text-boxes">
                     <p>
-                        A continuación podrás ver una lista de necesidades de nuestros hospedados. Así sabrás que nos hace
+                        A continuación podrás ver una lista de necesidades de nuestros hospedados. Así sabrás que nos
+                        hace
                         falta en la casa y que nos sería de mucha utilidad.
                     </p>
                     <button>
                         <a href="/necesidades">¿Qué necesitamos?</a>
                     </button>
                 </div>
-              </div>
-              <div class="col-sm">
+            </div>
+            <div class="col-sm">
                 <figure>
                     <img src="../public/images/donativo.png" alt="despensa">
                     <figcaption>¡Apóyanos!</figcaption>
                 </figure>
                 <div class="text-boxes">
                     <p>
-                        Aquí podrás apoyarnos directamente. ¿Qué nos estas donando? ¿A quién se lo estás donando? ¡Todo eso
+                        Aquí podrás apoyarnos directamente. ¿Qué nos estas donando? ¿A quién se lo estás donando? ¡Todo
+                        eso
                         y más!
                     </p>
                     <button>
                         <a href="/donativo">¡Apóyanos!</a>
                     </button>
                 </div>
-                
-              </div>
+
             </div>
-          </div>       
-    </section>
-    <%- include("template/footer" ) %>
+        </div>
+    </div>
+</section>
+<%- include("template/footer" ) %>
 </body>
 
 </html>
