--- a/src/views/donation.ejs
+++ b/src/views/donation.ejs
@@ -1,5 +1,100 @@
 <%- include("template/header" , {tituloWeb: 'Donacion | Casa del Anciano Poncitlán'} ) %>
 
+<div class="container-fluid">
+
+  <div class="row justify-content-center my-4">
+    <h2>¡Ayudanos con una donación!</h2>
+  </div>
+
+  <div class="row">
+    <div class="col-6 p-4 shadow-sm">
+
+      <img class="paypal-icon" src="../public/images/paypal.svg" alt="paypal-logo">
+
+
+      <form>
+        <div class="form-group">
+          <label for="name">Nombre completo</label>
+          <input type="text" class="form-control" id="name">
+        </div>
+
+        <div class=" form-group">
+          <label for="email">Correo</label>
+          <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+        </div>
+
+        <div class="form-group">
+          <label for="phone">Número de teléfono</label>
+          <input type="tel" class="form-control" id="tel">
+        </div>
+
+        <div class="form-group">
+          <label for="donation">Monto a donar</label>
+          <input type="number" class="form-control" id="donation">
+        </div>
+
+        <div class="form-group">
+          <label for="message">Mensaje</label><br>
+          <textarea name="message" id="message" cols="85" rows="6"></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Donar con Paypal</button>
+      </form>
+    </div>
+
+    <div class="col-6 p-4 shadow-sm">
+
+      <img class="icon m-4" src="../public/images/visa.svg" alt="visa-logo">
+      <img class="icon m-4" src="../public/images/mastercard.svg" alt="mastercard-logo">
+      <img class="icon m-4" src="../public/images/american-express.svg" alt="american-express-logo">
+
+      <form>
+        <div class="form-group">
+          <label for="name">Nombre completo</label>
+          <input type="text" class="form-control" id="name">
+        </div>
+
+        <div class=" form-group">
+          <label for="email">Correo</label>
+          <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+        </div>
+
+        <div class="form-group">
+          <label for="phone">Número de teléfono</label>
+          <input type="tel" class="form-control" id="tel">
+        </div>
+
+        <div class="form-group">
+          <label for="card">Número de tarjeta</label>
+          <input type="number" class="form-control" id="card">
+        </div>
+
+        <div class="form-group">
+          <label for="date">Fecha de expiración</label>
+          <input type="date" class="form-control" id="date">
+        </div>
+
+        <div class="form-group">
+          <label for="cvv">CVV</label>
+          <input type="number" class="form-control" id="cvv">
+        </div>
+
+        <div class="form-group">
+          <label for="donation">Monto a donar</label>
+          <input type="number" class="form-control" id="donation">
+        </div>
+
+        <div class="form-group">
+          <label for="message">Mensaje</label><br>
+          <textarea name="message" id="message" cols="85" rows="6"></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-success">Donar</button>
+      </form>
+    </div>
+  </div>
+</div>
+
 
 <%- include("template/footer" ) %>
 </body>
