--- a/src/views/aboutUs.ejs
+++ b/src/views/aboutUs.ejs
@@ -1,6 +1,108 @@
-<%- include("template/header" , {tituloWeb: 'Contacto | Casa del Anciano Poncitlán'} ) %>
+<%- include("template/header" , {tituloWeb: 'Sobre Nosotros' }) %>   
+<div class="row">
+ <div class="col-sm-6">
+  <div class="card mb-3" style="max-width: 860px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="public/images/Maria.jpg" class="card-img-top elder-image" alt="Maria">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Maria Dolores</h5>
+          <p class="card-text">Hola, soy Maria y esta es mi historia:</p>
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="col-sm-6">
+  <div class="card mb-3" style="max-width: 860px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="public/images/Florencia.jpg" class="card-img-top elder-image" alt="Florencia">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Florencia Hernández</h5>
+          <p class="card-text">Hola, soy Maria y esta es mi historia:</p>
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
+<div class="col-sm-6">
+  <div class="card mb-3" style="max-width: 860px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="public/images/Pedro.jpg" class="card-img-top elder-image" alt="Pedro">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Pedro Treviño</h5>
+          <p class="card-text">Hola, soy Maria y esta es mi historia:</p>
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="col-sm-6">
+  <div class="card mb-3" style="max-width: 860px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="/public/images/Juancho.jpg" class="card-img-top elder-image" alt="Juancho">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Juancho Perez</h5>
+          <p class="card-text">Hola, soy Maria y esta es mi historia:</p>
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="col-sm-6">
+    <div class="card mb-3" style="max-width: 860px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <img src="/public/images/DonJulio.jpg" class="card-img-top elder-image" alt="DonJulio">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">Don Julio Ramirez</h5>
+            <p class="card-text">Hola, soy Maria y esta es mi historia:</p>
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+ <div class="col-sm-6">
+  <div class="card mb-3" style="max-width: 860px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="/public/images/Aldo.jpg" class="card-img-top elder-image" alt="Aldo">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Aldo González</h5>
+          <p class="card-text">Hola, soy Maria y esta es mi historia:</p>
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 <%- include("template/footer" ) %>
 </body>
-
 </html>
+
