--- a/src/views/needs.ejs
+++ b/src/views/needs.ejs
@@ -1,8 +1,4 @@
-<%- include("template/cabecera" , {tituloWeb: 'donativo' }) %>  
-<%- include("template/nav" ) %>
-<body>
-    <header>
-    </header>
-    <%- include("template/footer" ) %>
+<%- include("template/header" , {tituloWeb: 'Necesidades | Casa de Ancianos Poncitlan' }) %>  
+<%- include("template/footer" ) %>
 </body>
 </html>
