--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -7,6 +7,11 @@ html{
   opacity: 0.9;
 }
 
+/*  LOGIN STYLES  */
+.login-form{
+  padding: 0 20rem;
+  margin: 2rem 0;
+}
 
 /* CONTACT PAGE STYLES */
 
