--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -51,6 +51,32 @@ html{
   width:6rem;
 }
 
+.wa-div {
+  padding: 1rem 0;
+}
+
+.wabutton {
+  background-color: #25d366;
+  width: auto;
+  border: none;
+  color: white;
+  padding: 1rem;
+  font-size: 1rem;
+  font-family: "Merriweather";
+  border-radius: 0.5rem;
+}
+
+.wabutton:hover{
+  background-color: #1fb456;
+  font-weight: bold;
+  color: white;
+}
+
+.wa-icon {
+  width: 1.5rem;
+  margin: 0.5rem;
+}
+
 /* ABOUT US STYLES */
 
 .bg-blue{
