--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -12,17 +12,27 @@
     </div>
     </d>
 
-    <div class="row mt-5">
-      <div class="col justify-center inline-f">
-        <img class="icon" src="../public/images/phone.svg" alt="phone-icon">
-        <h3 class="ml-3">391 921 0384</h3>
-      </div>
+    <div class="container">
+      <div class="row mt-5">
+        <div class="col justify-center inline-f">
+          <img class="icon" src="../public/images/phone.svg" alt="phone-icon">
+          <h3 class="ml-3">391 921 0384</h3>
+        </div>
+  
+        <div class="col justify-center inline-f">
+          <img class="icon" src="../public/images/facebook.svg" alt="facebook-icon">
+          <h3 class="ml-3"><a href="https://www.facebook.com/CasaDeDescansoDelAncianoDePoncitlan">Nuesta página de
+              Facebook</a></h3>
+        </div>
+  
+        <div class="col justify-center inline-f">
+          <div class="centrado wa-div">
+            <a href="#"><button class="wabutton"><img class="wa-icon" src="../public/images/whatsapp.svg"
+                        alt="whatsapp-logo">Contacto via Whatsapp</button></a>
+          </div>
+        </div>
+    </div>
 
-      <div class="col justify-center inline-f">
-        <img class="icon" src="../public/images/facebook.svg" alt="facebook-icon">
-        <h3 class="ml-3"><a href="https://www.facebook.com/CasaDeDescansoDelAncianoDePoncitlan">Nuesta página de
-            Facebook</a></h3>
-      </div>
     </div>
 
     <div class="row mt-5">
