Historias de los viejitos y visión CDAP

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -86,6 +86,7 @@ html{
 
 .elegant-border{
   border-style:double;
+  background:lightblue;
 }
 .times-new-roman{
   font-family:"Times New Roman", Times, serif;
