--- a/src/views/aboutUs.ejs
+++ b/src/views/aboutUs.ejs
@@ -9,7 +9,13 @@
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">Maria Dolores</h5>
-          <p class="card-text">Hola, soy Maria y esta es mi historia:</p>
+          <p class="card-text">  
+            Érase una casa lugubre, obscura y solitaria. Hogar anterior de Maria. 
+            Su familia vivía al otro extremo de la ciudad, por lo cual no recibía visitas. 
+            Tras muchas noches de soledad y falta de compañia, así como malos habitos alimenticios, ella tomo una decisión. 
+            Moverse a una casa donde pudiese convivir con más gente y mejorar su salud.
+
+          </p>
           
         </div>
       </div>
@@ -25,7 +31,11 @@
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">Florencia Hernández</h5>
-          <p class="card-text">Hola, soy Maria y esta es mi historia:</p>
+          <p class="card-text">
+            Sus familiares sufrieron de un choque automovilístico cuando se dirigían a verla en su casa de Chapala.
+            Tras la pérdida a temprana edad de sus seres queridos, ella se vio olbigada a cambiar de casa. La tristeza acumulada la llevo 
+            a cambiar de rumbos. Ahora conocida por todos como "Flor" una de las viejitas más emblemáticas y antiguas de la casa.
+          </p>
           
         </div>
       </div>
@@ -42,7 +52,10 @@
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">Pedro Treviño</h5>
-          <p class="card-text">Hola, soy Maria y esta es mi historia:</p>
+          <p class="card-text">Proviniente del norte de México ,Pedro, se vio involucrado en un severo caso de adicción al alcohol.
+             Esto lo llevo a alejarse de su esposa y sus seres queridos. Tras mucho esfuerzo y dedicación logró superar dicha adicción,
+              pero el daño fue irreparable. No pudo recuperar lo que más quería... ¡Ahora forma parte de nuestra familia!
+            </p>
           
         </div>
       </div>
@@ -60,7 +73,12 @@
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">Juancho Perez</h5>
-          <p class="card-text">Hola, soy Maria y esta es mi historia:</p>
+          <p class="card-text">
+            Juancho fue un ingeniero civil muy reconocido en su ciudad de origen. Desgraciadamente el éxito no es eterno,
+             al hablar olvidaba de lo que estaba hablando. Empezaba a olvidarlo todo. Su familia, preocupada por el, se vio 
+             obligada a traerlo a un lugar donde podría convivir con mas viejitos. Padecía de alzheimer.
+              Lo que el no sabía es que su familia jamás regresaría por el...
+          </p>
           
         </div>
       </div>
@@ -76,8 +94,13 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Don Julio Ramirez</h5>
-            <p class="card-text">Hola, soy Maria y esta es mi historia:</p>
+            <h5 class="card-title">Don Julio Ramírez</h5>
+            <p class="card-text">
+              Don Julio, carsmático, ocurrente y gran persona. Retirado de una emocionante vida de empresario y abogado, 
+              busco un lugar donde pudiese convivir con gente de su edad, un lugar único con personas increíbles. Cerca de rendirse buscando su lugar ideal, 
+              encontró la casa de ancianos de poncitlán. Lugar donde empezaría su vida después del retiro.
+
+            </p>
             
           </div>
         </div>
@@ -89,18 +112,34 @@
   <div class="card mb-3" style="max-width: 860px;">
     <div class="row no-gutters">
       <div class="col-md-4">
-        <img src="/public/images/Aldo.jpg" class="card-img-top elder-image" alt="Aldo">
+        <img src="/public/images/Pablo.jpg" class="card-img-top elder-image" alt="Pablo">
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h5 class="card-title">Aldo González</h5>
-          <p class="card-text">Hola, soy Maria y esta es mi historia:</p>
+          <h5 class="card-title">Pablo Gutierrez</h5>
+          <p class="card-text">
+            Pablo, proviniente del sur de América, buscando una nueva aventura se movió a México cuando apenas era joven. Trabajando y 
+            esforzandose mucho consiguió cumplir sus metas. Puso su propio restaurante de comida colombiana. Tras muchos años y ya
+             retirado ahora su negocio lo llevan sus hijos. El descansa aquí después de ser muy feliz con su restaurante. Ahora el comparte sus
+              recuerdos con los demás miembros de esta familia.
+          </p>
           
         </div>
       </div>
     </div>
   </div>
 </div>
+</div>
+<div class = "text-center elegant-border">
+  <h1>
+    Visión:
+  </h1>
+  <p>
+    Queremos que los viejitos aqui hospedados vivan sus últimos días de la mejor manera independientemente de su historia.
+    La casa de ancianos de poncitlán busca que todos sean felices y llenos de alegría el tiempo que les queda. 
+    Los apoyaremos a todos y cada uno de ellos para que puedan lograrlo. Seremos el nuevo hogar de estas increíbles personas.
+    Esto no sería posible sin tu ayuda. ¡Tu puedes ayudarnos para que no les falte nada!
+  </p>
 </div>
 <%- include("template/footer" ) %>
 </body>
