--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -57,14 +57,14 @@
 
   <div class="row justify-content-center">
     <div class="col-4">
-      <form>
+      <form action="/contacto" method="POST">
         <div class="form-group">
           <label for="name">Nombre</label>
-          <input type="text" class="form-control" id="name">
+          <input type="text" class="form-control" id="name" name="name">
         </div>
         <div class="form-group">
           <label for="email">Correo electrónico</label>
-          <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email">
         </div>
         <div class="form-group">
           <label for="message">Mensaje</label><br>
@@ -74,6 +74,7 @@
       </form>
     </div>
   </div>
+  
 </div>
 <%- include("template/footer" ) %>
 </body>
