--- a/src/views/error404.ejs
+++ b/src/views/error404.ejs
@@ -1,4 +1,4 @@
-<%- include("template/cabecera" , {tituloWeb: 'Error 404'} ) %>
+<%- include("template/header" , {tituloWeb: 'Error 404'} ) %>
 
 <body>
     <h1>Página de error -> no existe la dirección que estas buscando</h1>
