ya se pueden mandar mensajes con el boton de wa

--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -27,7 +27,7 @@
   
         <div class="col justify-center inline-f">
           <div class="centrado wa-div">
-            <a href="#"><button class="wabutton"><img class="wa-icon" src="../public/images/whatsapp.svg"
+            <a href="https://wa.link/8xwa53"><button class="wabutton"><img class="wa-icon" src="../public/images/whatsapp.svg"
                         alt="whatsapp-logo">Contacto via Whatsapp</button></a>
           </div>
         </div>
