header de admin agregado

--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -1,4 +1,4 @@
-<%- include("template/header" , {tituloWeb: 'Necesidades | Casa de Ancianos Poncitlan' }) %>  
+<%- include("template/adminheader" , {tituloWeb: 'Casa de Ancianos Poncitlan' }) %>  
 
 <div class="container-fluid">
 
