--- a/src/views/aboutUs.ejs
+++ b/src/views/aboutUs.ejs
@@ -130,15 +130,22 @@
   </div>
 </div>
 </div>
-<div class = "text-center elegant-border">
+<div class = "text-center elegant-border ">
   <h1>
     Visión:
   </h1>
   <p>
     Queremos que los viejitos aqui hospedados vivan sus últimos días de la mejor manera independientemente de su historia.
-    La casa de ancianos de poncitlán busca que todos sean felices y llenos de alegría el tiempo que les queda. 
+    Nuestra casa busca que todos sean felices y llenos de alegría el tiempo que les queda. 
     Los apoyaremos a todos y cada uno de ellos para que puedan lograrlo. Seremos el nuevo hogar de estas increíbles personas.
     Esto no sería posible sin tu ayuda. ¡Tu puedes ayudarnos para que no les falte nada!
+  </p>
+  <h2>
+    Misión:
+  </h2>
+  <p>
+    Vamos a recibir a tantos viejitos como podamos, así como lograr que se adapten a la casa con el fin de que 
+    encuentren un nuevo hogar en las últimas estapas de sus vidas. Para que puedan seguir viviendo de manera digna y sean felices. 
   </p>
 </div>
 <%- include("template/footer" ) %>
