Cambio de nombre de la casa

--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -4,8 +4,8 @@
   <div class="row mt-5">
     <div class="col">
       <h2>¿Dónde estamos?</h2>
-      <p>Pueden encontrarnos en: <strong>Donato Guerra 340, Colonia El Toril
-          Poncitlán, Jalisco, México</strong></p>
+      <p>Pueden encontrarnos en: <strong>San Felipe 570, Guadalajara centro
+           Jalisco, México</strong></p>
     </div>
     <div class="col">
       <img src="../public/images/map-dir.jpeg" alt="google-maps-img">
@@ -37,7 +37,7 @@
 
     <div class="row mt-5">
       <div class="col text-center">
-        <p class="italic">Un lugar donde los ancianitos que habitan en el lo han adoptado como su hogar.</p>
+        <p class="italic">El lugar donde encontrarán su nuevo hogar</p>
       </div>
     </div>
 
