--- a/src/views/template/footer.ejs
+++ b/src/views/template/footer.ejs
@@ -1,3 +1,3 @@
 <footer>
-    Casa de Descanso Del Anciano de Poncitlan | Teléfono:391 921 0384 | casadedescanso9604@gmail.com
+    Casa de Descanso la última esperanza | Teléfono:391 921 0384 | casadedescanso9604@gmail.com
 </footer>
