--- a/src/views/template/header.ejs
+++ b/src/views/template/header.ejs
@@ -40,5 +40,5 @@
         </div>
     </nav>
     <header>
-        <h1 class="text-white text-center">Casa de Descanso Del Anciano de Poncitlan</h1>
+        <h1 class="text-white text-center">Casa de Descanso la última esperanza</h1>
     </header>
