--- a/src/views/template/adminheader.ejs
+++ b/src/views/template/adminheader.ejs
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="/admin">Necesidades <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link" href="/wpost">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/">Salir</a>
