--- a/src/views/aboutUs.ejs
+++ b/src/views/aboutUs.ejs
@@ -1,6 +1,6 @@
 <%- include("template/header" , {tituloWeb: 'Sobre Nosotros' }) %>   
 <div class="row">
- <div class="col-sm-6">
+ <div class="col-sm-6 p-4">
   <div class="card mb-3" style="max-width: 860px;">
     <div class="row no-gutters">
       <div class="col-md-4">
@@ -22,7 +22,7 @@
     </div>
   </div>
 </div>
-<div class="col-sm-6">
+<div class="col-sm-6 p-4">
   <div class="card mb-3" style="max-width: 860px;">
     <div class="row no-gutters">
       <div class="col-md-4">
@@ -43,7 +43,7 @@
   </div>
 </div>
 
-<div class="col-sm-6">
+<div class="col-sm-6 p-4">
   <div class="card mb-3" style="max-width: 860px;">
     <div class="row no-gutters">
       <div class="col-md-4">
@@ -64,7 +64,7 @@
 </div>
 
 
-<div class="col-sm-6">
+<div class="col-sm-6 p-4">
   <div class="card mb-3" style="max-width: 860px;">
     <div class="row no-gutters">
       <div class="col-md-4">
@@ -86,7 +86,7 @@
   </div>
 </div>
 
-<div class="col-sm-6">
+<div class="col-sm-6 p-4">
     <div class="card mb-3" style="max-width: 860px;">
       <div class="row no-gutters">
         <div class="col-md-4">
@@ -108,7 +108,7 @@
     </div>
   </div>
 
- <div class="col-sm-6">
+ <div class="col-sm-6 p-4">
   <div class="card mb-3" style="max-width: 860px;">
     <div class="row no-gutters">
       <div class="col-md-4">
