--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -2,11 +2,12 @@
 
 <section class="features">
     <div class="container">
-        <div class="row">
+
+        <div class="row py-4">
             <div class="col-sm">
                 <figure>
-                    <img src="../public/images/SobreNosotros.jpg" alt="Historias">
-                    <figcaption>¡Sobre Nosotros!</figcaption>
+                    <img class="img-circle w-25" src="../public/images/nosotros.jpg" alt="Historias">
+                    <figcaption class="py-3">¡Sobre nosotros!</figcaption>
                 </figure>
                 <div class="text-boxes">
                     <p>
@@ -20,8 +21,8 @@
             </div>
             <div class="col-sm">
                 <figure>
-                    <img src="../public/images/unidos.jpg" alt="unidos">
-                    <figcaption>¡Conócenos!</figcaption>
+                    <img class="img-circle w-25" src="../public/images/conocenos.jpg" alt="unidos">
+                    <figcaption class="py-3">¡Conócenos!</figcaption>
                 </figure>
                 <div class="text-boxes">
                     <p>
@@ -34,10 +35,13 @@
                 </div>
 
             </div>
+        </div>
+
+        <div class="row py-4">
             <div class="col-sm">
                 <figure>
-                    <img src="../public/images/apoyo.jpg" alt="apoyo">
-                    <figcaption>¿Qué necesitamos?</figcaption>
+                    <img class="img-circle w-25" src="../public/images/necesitamos.jpg" alt="apoyo">
+                    <figcaption class="py-3">¿Qué necesitamos?</figcaption>
                 </figure>
                 <div class="text-boxes">
                     <p>
@@ -52,8 +56,8 @@
             </div>
             <div class="col-sm">
                 <figure>
-                    <img src="../public/images/donativo.png" alt="despensa">
-                    <figcaption>¡Apóyanos!</figcaption>
+                    <img class="img-circle w-25" src="../public/images/apoyo.jpg" alt="despensa">
+                    <figcaption class="py-3">¡Apóyanos!</figcaption>
                 </figure>
                 <div class="text-boxes">
                     <p>
@@ -68,9 +72,11 @@
 
             </div>
         </div>
+
+            
     </div>
 </section>
 <%- include("template/footer" ) %>
-</body>
 
+</body>
 </html>
