--- a/src/views/needs.ejs
+++ b/src/views/needs.ejs
@@ -1,9 +1,9 @@
 <%- include("template/header" , {tituloWeb: 'Necesidades | Casa de Ancianos Poncitlan' }) %>  
 
 <div class="container py-4">
-  <table class="table">
-    <thead class="thead-dark">
-      <tr>
+  <table class="table table-striped">
+    <thead>
+      <tr class="table-danger">
         <th scope="col">Nombre</th>
         <th scope="col">Costo</th>
         <th scope="col">Descripción</th>
