--- a/src/views/post.ejs
+++ b/src/views/post.ejs
@@ -1,8 +1,11 @@
 <%- include("template/header" , {tituloWeb: 'Necesidades | Casa de Ancianos Poncitlan' }) %>  
 
-<div class="container">
-  <h2><%=title%></h2>
+<div class="container py-4">
+  <h2 class="py-4"><%=title%></h2>
   <p><%=content%></p>
+
+  <a href="/blog"><button>Volver</button></a>
+
 </div>
 
 
