--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -55,7 +55,7 @@
     </div>
   </div>
 
-  <div class="row justify-content-center">
+  <div class="row justify-content-center my-4">
     <div class="col-4">
       <form action="/contacto" method="POST">
         <div class="form-group">
