--- a/src/views/error404.ejs
+++ b/src/views/error404.ejs
@@ -1,6 +1,53 @@
-<%- include("template/header" , {tituloWeb: 'Error 404'} ) %>
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <!-- Bootstrap CSS | esto nos permite usar bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../public/css/styles.css">
+    <title>Error 404</title>
+</head>
 
 <body>
-    <h1>Página de error -> no existe la dirección que estas buscando</h1>
+    <nav class="navbar fixed-top navbar-expand-lg">
+        <a class="navbar-brand" href="/"><img class="logo rounded-circle" src="../../public/images/logo-cdap.png"
+                alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Inicio <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/SobreNosotros">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contacto">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/necesidades">Necesidades</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/donativo">Donativo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/blog">Blog</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- <header>
+        <h1 class="text-white text-center">Casa de Descanso la última esperanza</h1>
+    </header> -->
+
+<img class="w-100" src="../public/images/404.png" alt="404-error">
+
+<%- include("template/footer" ) %>
 </body>
 </html>
