--- a/src/views/wpost.ejs
+++ b/src/views/wpost.ejs
@@ -7,12 +7,27 @@
   </div>
       <form action="/wpost" method="post">
         <div class="form-group">
-          <label>Title</label>
+          <label>Titulo</label>
           <input class="form-control" type="text" name="title">
           <label>Post</label>
           <textarea class="form-control" name="content" rows="5" cols="30"></textarea>
         </div>
         <button class="btn btn-primary" type="submit" name="button">Publicar post</button>
+      </form>
+</div>
+
+
+<div class="container py-4">
+
+  <div class="row justify-content-center my-4">
+    <h2>Elimina un post</h2>
+  </div>
+      <form action="/dpost" method="post">
+        <div class="form-group">
+          <label>Titulo del post a eliminar</label>
+          <input class="form-control" type="text" name="title">
+        </div>
+        <button class="btn btn-primary" type="submit" name="button">Eliminar post</button>
       </form>
 </div>
 
